// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should be able to render 1`] = `
<div>
  <div
    class="grid grid-rows-1 grid-cols-1 place-content-center gap-2 place-items-center"
  >
    <div
      class="grid grid-rows-1 grid-cols-[auto_auto_auto] rounded bg-orange-100 place-content-center gap-2 place-items-center px-2 py-1"
    >
      <span
        class="flex before:bg-orange-700 before:inline-block before:flex-none before:[mask-image:url(/static/svg/tabler-icons/user.svg)] before:[mask-size:cover] before:[mask-position:center] before:[mask-repeat:no-repeat] before:w-6 before:h-6 w-6 h-6"
      />
      <span
        class="flex flex-none outline-none border-none p-0 h-8 items-center rounded"
        role="switch"
      >
        <span
          class="flex relative inline-block bg-transparent h-6 justify-items-center border border-emerald-600 rounded"
        >
          <span
            class="relative inline-block m-0 px-1 w-12 h-full transition-colors overflow-hidden rounded bg-emerald-100"
          >
            <span
              class="absolute inline-block bg-emerald-500 h-full w-6 left-0 top-0 transition-transform"
            />
          </span>
          <input
            class="hidden"
            type="checkbox"
          />
        </span>
      </span>
      <span
        class="flex before:bg-orange-700 before:inline-block before:flex-none before:[mask-image:url(/static/svg/tabler-icons/eye.svg)] before:[mask-size:cover] before:[mask-position:center] before:[mask-repeat:no-repeat] before:w-6 before:h-6 w-6 h-6"
      />
    </div>
  </div>
</div>
`;

exports[`should change current check 1`] = `
<div>
  <div
    class="grid grid-rows-1 grid-cols-1 place-content-center gap-2 place-items-center"
  >
    <div
      class="grid grid-rows-1 grid-cols-[auto_auto_auto] rounded bg-orange-100 place-content-center gap-2 place-items-center px-2 py-1"
    >
      <span
        class="flex before:bg-orange-700 before:inline-block before:flex-none before:[mask-image:url(/static/svg/tabler-icons/user.svg)] before:[mask-size:cover] before:[mask-position:center] before:[mask-repeat:no-repeat] before:w-6 before:h-6 w-6 h-6"
      />
      <span
        class="flex flex-none outline-none border-none p-0 h-8 items-center rounded"
        role="switch"
      >
        <span
          class="flex relative inline-block bg-transparent h-6 justify-items-center border border-emerald-600 rounded"
        >
          <span
            class="relative inline-block m-0 px-1 w-12 h-full transition-colors overflow-hidden rounded bg-emerald-300"
          >
            <span
              class="absolute inline-block bg-emerald-500 h-full w-6 left-0 top-0 transition-transform translate-x-6"
            />
          </span>
          <input
            checked=""
            class="hidden"
            type="checkbox"
          />
        </span>
      </span>
      <span
        class="flex before:bg-orange-700 before:inline-block before:flex-none before:[mask-image:url(/static/svg/tabler-icons/eye.svg)] before:[mask-size:cover] before:[mask-position:center] before:[mask-repeat:no-repeat] before:w-6 before:h-6 w-6 h-6"
      />
    </div>
  </div>
</div>
`;
